# alphavar

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  data  package-lock.json  pyproject.toml  sonar-project.properties  test.env.example
.claude/: settings.json
.claude/hooks/: git-commit-guard.py
.claude/skills/data-sources/: SKILL.md
.claude/skills/fit-volatility-smile/: SKILL.md
.claude/skills/option-chain/: SKILL.md
.claude/skills/pricing-and-iv/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/strategy-payoff/: SKILL.md
.codex/: README.md  hooks.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
_forge/: .keystone.toml  D2_VERIFICATION.md  DEVELOPMENT_REQUIREMENTS.md  README.md  TASKS.md  TASKS_ARCHIVE.md
_forge/agents/: README.md
_forge/agents/architect/: README.md
_forge/agents/engineer/: README.md
_forge/agents/review/: README.md
_forge/design/: architecture-remediation.md  domains-roadmap.md
_forge/design/forecast/: README.md
_forge/design/pricer/: smile-shift.md
_forge/design/result-chain/: README.md  TASKS.md  a9c-lib-inventory.md  disc-derivation.md  flow-module.md  rejected-branches.md  structure-requirements.md  v1-price-slice.md
_forge/memory/: README.md  env-and-test-running.md  keystone-ai-assist-model.md  keystone-edits-go-to-submodule.md  keystone-knowledge-layer.md  keystone-role-vs-agent.md  operate-desk-out-of-keystone.md  owner-owns-commits.md  owner-verifies-math-and-architecture.md
_forge/skills/: README.md  add-exchange-source.md  migrate-stored-data.md  refresh-exchange-fixtures.md  track-task.md
_forge/tools/: README.md
_forge/tools/data_migration/: __init__.py  __main__.py  _diagnose.py
_forge/tools/exchange_fixtures/: __init__.py  __main__.py  _record.py  deribit.py  moex.py
agents/: GUARDRAILS.md  README.md
agents/_dev/: README.md  TASKS.md
agents/_dev/memory/: README.md  agent-artifacts-layout.md  agent-modes-and-layout.md  env-and-test-running.md  owner-verifies-math-and-architecture.md
agents/_dev/skills/: README.md  add-exchange-source.md  migrate-stored-data.md  refresh-exchange-fixtures.md
agents/_dev/tools/: README.md
agents/desk/: GUARDRAILS.md  README.md
agents/desk/options-analyst/: README.md  pipeline.md
agents/knowledge/exchanges/: README.md
agents/knowledge/options/: README.md  concepts.md
agents/memory/: agent-artifacts-layout.md  env-and-test-running.md
agents/options-analyst/: README.md  pipeline.md
agents/shared/: README.md
agents/shared/knowledge/: README.md
agents/skills/: README.md  add-exchange-source.md  refresh-exchange-fixtures.md
agents/tools/: README.md  exchange-fixtures.md
agents/tools/exchange_fixtures/: __init__.py  __main__.py  _record.py  deribit.py  moex.py
demo/books_and_articles_reproducing/: Options for Smart Investor.ipynb
demo/etl_example/deribit/: deribit_etl_join_updates_to_EOD.py  deribit_etl_run.py
demo/etl_example/moex/: moex_etl_join_updates_to_EOD.py  moex_etl_run.py
docs/: PROJECT_OVERVIEW.md
docs/dev/: AI_WORKING_MODEL.md  ARCHITECTURE_REQUIREMENTS.md  D2_VERIFICATION.md  DEVELOPMENT_REQUIREMENTS.md  PROJECT_OVERVIEW.md  TASKS.md
docs/dev/agents/: README.md
docs/dev/decisions/: 0001-instrument-kind-canon.md  0002-forecast-model-factory-axes.md  0003-composable-result-chain.md  0004-lib-class-contract-boundaries.md  README.md
knowledge/: README.md
knowledge/exchanges/: README.md
knowledge/options/: concepts.md
knowledge/options/payoffs/: README.md  single-leg.md
knowledge/options/pricing/: greeks.md
knowledge/options/strategies/: straddle.md
knowledge/risk/: README.md
knowledge/risk/ratios/: sortino.md
knowledge/risk/var/: README.md  cvar-expected-shortfall.md  methods.md
skills/: README.md
skills/data-sources/: SKILL.md
skills/fit-volatility-smile/: SKILL.md
skills/option-chain/: SKILL.md
skills/pricing-and-iv/: SKILL.md
skills/strategy-payoff/: SKILL.md
src/alphavar/: __init__.py  option_class.py  option_data_class.py
src/alphavar/analytic/: __init__.py  analytic_class.py
src/alphavar/chain/: __init__.py  _chain_class.py
src/alphavar/chart/: __init__.py  chart_class.py
src/alphavar/core/: __init__.py  disc.py
src/alphavar/enrichment/: __init__.py  _enrichment_class.py
src/alphavar/exchange/: __init__.py  _abstract_exchange.py  binance.py  deribit.py  exchange_fabric.py  exchange_provider_factory.py  moex.py
src/alphavar/flow/: __init__.py
src/alphavar/io/: __init__.py
src/alphavar/messanger/: __init__.py  stdandard.py  telegram.py
src/alphavar/options/: __init__.py  analytic_class.py  analytic_price_class.py  analytic_risk_class.py  chain_class.py  chart_class.py  chart_price_class.py  enrichment_class.py  forecast_class.py  option_class.py  option_data_class.py  pricer_class.py  producers.py  validation_class.py
src/alphavar/options_etl/: __init__.py  deribit_etl.py  etl_class.py  etl_updates_to_history.py  moex_etl.py
src/alphavar/provider/: __init__.py  _abstract_provider_class.py  _file_provider.py  _local_provider.py  _provider_entities.py
src/options_assembler/analytic/: __init__.py
tests/: conftest.py
tests/unit/etl/: conftest.py  deribit_etl_test.py  etl_history_test.py  etl_options_test.py  moex_etl_test.py
tests/unit/exchange/: _deribit_canned.py  binance_test.py  conftest.py  deribit_market_test.py  deribit_test.py  exchange_fabric_test.py  exchange_provider_factory_test.py  instrument_kind_mapping_test.py  moex_options_test.py  moex_test.py  request_class_test.py
tests/unit/flow/: v1_price_slice_test.py
tests/unit/messanger/: telegram_test.py
tests/unit/options/: chain_class_test.py  chart_price_time_values_test.py  enrichment_class_test.py  option_class_test.py  option_data_class_test.py  option_data_drop_na_test.py
tests/unit/provider/: file_provider_test.py  local_provider_test.py  provider_entities_test.py
tests/utils/exchange_fixtures/: __init__.py  mock.py  trim.py
tools/: README.md  build_ci_fixtures.py  migrate_data_layout.py  sync_test_data.sh
(+307 files in other folders)
