[project]
name = "alphavar"
version = "0.1.1"
authors = [
    {name ="Andrei Kuminov", email ="akuminov@gmail.com"}
]
description = "alphavar (alpha + VaR) — a Python library for risk-aware options and futures analysis and visualization"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
keywords = ["options", "futures", "derivatives", "volatility", "value-at-risk", "trading", "quant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://alphavar.dev"
Repository = "https://github.com/akumidv/alphavar"
Documentation = "https://alphavar.dev"

[tool.poetry]
packages = [{ include = "alphavar", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
pydantic = "^2.10.5"
chart-studio = "^1.1.0"
pyarrow = "^21.0.0"
httpx = "^0.28.1"
matplotlib = "^3.9.0"
cachetools = "6.2.0"


[tool.poetry.group.etl]
optional = true

[tool.poetry.group.etl.dependencies]
apscheduler = "^3.11.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
setuptools = "^80.9.0"
jupyter = "^1.1.1"
pylint = "^3.3.4"
twine = "^6.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^1.2.0"
pytest-dotenv = "^0.5.2"


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
env_files = [
    "test.env"
]
testpaths = [
    "tests",
]


[tool.pylint.MASTER]
extension-pkg-whitelist = 'numpy'
init-hook = 'import sys; sys.path.append("./src"); sys.path.append("./tests")'
no-docstring-rgx = '^_|^test_' # _private and test_ fucntions
#protected-access = '^test_' # unknown options

[tool.pylint.basic]
good-names='logger'
ignore='vendor'

[tool.pylint.DESIGN]
max-positional-arguments = 6
max-args = 8

[tool.pylint.typecheck]
ignored-modules='numpy'

[tool.pylint.FORMAT]
max-line-length = 120
