[project]
name = "alphavar"
version = "0.1.1"
authors = [
    {name ="Andrei Kuminov", email ="akuminov@gmail.com"}
]
description = "alphavar (alpha + VaR) — a Python library for risk-aware options and futures analysis and visualization"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.14"
keywords = ["options", "futures", "derivatives", "volatility", "value-at-risk", "trading", "quant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.2.3,<3",
    "numpy>=2.1,<3",
    "pandera>=0.20,<1",
    "python-dotenv>=1.0.1,<2",
    "pydantic>=2.10.5,<3",
    "plotly>=5.24,<7",
    "pyarrow>=21.0.0,<25",
    "httpx>=0.28.1,<1",
    "matplotlib>=3.9.0,<4",
    "cachetools==6.2.0",
    "psutil>=6.0,<7",
]

[project.optional-dependencies]
# Runtime extra for the ETL subpackage: `uv sync --extra etl` / `pip install 'alphavar[etl]'`.
etl = ["apscheduler>=3.11.0,<4"]

[project.urls]
Homepage = "https://alphavar.dev"
Repository = "https://github.com/akumidv/alphavar"
Documentation = "https://alphavar.dev"

# Development dependency groups (PEP 735). `uv sync` installs the default-groups below.
[dependency-groups]
dev = [
    "setuptools>=80.9.0,<81",
    "jupyter>=1.1.1,<2",
    "pylint>=3.3.4,<4",
    "twine>=6.0.0,<7",
]
test = [
    "pytest>=8.3.5,<9",
    "pytest-asyncio>=1.2.0,<2",
    "pytest-dotenv>=0.5.2,<0.6",
]

[tool.uv]
default-groups = ["dev", "test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphavar"]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
env_files = [
    "test.env"
]
testpaths = [
    "tests",
]


[tool.pylint.MASTER]
extension-pkg-whitelist = 'numpy'
init-hook = 'import sys; sys.path.append("./src"); sys.path.append("./tests")'
no-docstring-rgx = '^_|^test_' # _private and test_ fucntions
#protected-access = '^test_' # unknown options

[tool.pylint.basic]
good-names='logger'
ignore='vendor'

[tool.pylint.DESIGN]
max-positional-arguments = 6
max-args = 8

[tool.pylint.typecheck]
ignored-modules='numpy'

[tool.pylint.FORMAT]
max-line-length = 120
