[project]
name = "alphavar"
version = "0.1.1"
authors = [
    {name ="Andrei Kuminov", email ="akuminov@gmail.com"}
]
description = "alphavar (alpha + VaR) — a Python library for risk-aware options and futures analysis and visualization"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.14"
keywords = ["options", "futures", "derivatives", "volatility", "value-at-risk", "trading", "quant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.2.3,<3",
    "numpy>=2.1,<3",
    "pandera>=0.20,<1",
    "python-dotenv>=1.0.1,<2",
    "pydantic>=2.10.5,<3",
    "plotly>=5.24,<7",
    "pyarrow>=21.0.0,<25",
    "httpx>=0.28.1,<1",
    "matplotlib>=3.9.0,<4",
    "cachetools==6.2.0",
]

[project.optional-dependencies]
# Runtime extra for the ETL subpackage: `uv sync --extra etl` / `pip install 'alphavar[etl]'`.
etl = ["apscheduler>=3.11.0,<4"]

[project.urls]
Homepage = "https://alphavar.dev"
Repository = "https://github.com/akumidv/alphavar"
Documentation = "https://alphavar.dev"

# Development dependency groups (PEP 735). `uv sync` installs the default-groups below.
[dependency-groups]
dev = [
    "setuptools>=80.9.0,<81",
    "jupyter>=1.1.1,<2",
    "ruff>=0.9,<1",
    "twine>=6.0.0,<7",
]
test = [
    "pytest>=8.3.5,<9",
    "pytest-asyncio>=1.2.0,<2",
    "pytest-dotenv>=0.5.2,<0.6",
]

[tool.uv]
default-groups = ["dev", "test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphavar"]

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "."
]
env_files = [
    "test.env"
]
testpaths = [
    "tests",
]
# Unit suite is hermetic by default (T11/D1). Integration tests hit a live external API
# (exchange, Telegram, …) or do heavy multi-asset walks — opt in with `pytest -m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: hits a live external API (exchange, Telegram, …) or walks many assets; deselected by default",
]


[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
# pyflakes (F) + pycodestyle errors/warnings (E/W) + isort (I) + pyupgrade (UP) + bugbear (B).
select = ["F", "E", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# tests may redefine fixtures and assert on broad exceptions (rejection paths).
"tests/**" = ["F811", "B011", "B017"]
# payoff.py keeps the prior implementation commented for owner D2 verification (T14b) —
# do not reflow it; the long lines are in that preserved block.
"src/alphavar/options/lib/analytic/risk/payoff.py" = ["E501"]
